# aitools-canvas-api

./: .gitignore  README-uvgrader.md  README.md  TESTING-GUIDE.md  canvas_config.json.example  canvas_discussions.py  canvas_speedgrader.py  example_grader.py  find_assignment_id.py  pyproject.toml  uv_grader_wrapper.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
