[project]
name = "canvas-api-grader"
version = "1.0.0"
description = "Canvas API automated grading system with UV wrapper support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
Homepage = "https://github.com/your-repo/canvas-api-grader"
Repository = "https://github.com/your-repo/canvas-api-grader.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "canvas_env/",
    "memory-bank/",
    ".clinerules/",
    "*.json",
    "*.log",
    "test_*.py",
]

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
dev = []
